--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "5.0.0",
   "private": true,
   "dependencies": {
+    "@mui/icons-material": "^5.5.1",
     "@mui/lab": "latest",
     "@mui/material": "latest",
     "@mui/styled-engine-sc": "latest",
+    "@mui/system": "^5.5.3",
     "@testing-library/jest-dom": "latest",
     "@testing-library/react": "latest",
     "@testing-library/user-event": "latest",
     "d3": "^7.4.0",
+    "node-forge": "^1.3.1",
     "react": "latest",
     "react-dom": "latest",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "latest",
     "styled-components": "latest"
   },
