--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "latest",
     "react-dom": "latest",
     "react-router-dom": "^6.3.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "latest",
     "styled-components": "latest"
   },
