--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@testing-library/react": "latest",
     "@testing-library/user-event": "latest",
     "d3": "^7.4.0",
+    "material-ui-image": "^3.3.2",
     "node-forge": "^1.3.1",
     "react": "latest",
     "react-dom": "latest",
+    "react-iframe": "^1.8.0",
     "react-router-dom": "^6.3.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "latest",
